updated code for tracking segmetnation of t1c and fla images

--- a/code_updated/02_Create_Datalist-FLAIRONLY.ipynb
+++ b/code_updated/02_Create_Datalist-FLAIRONLY.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -115,7 +115,7 @@
        "  {'image': 'nifti_march_2020/images/b4836/t13600/t13600_fla.nii.gz'}]}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "(3630, 8)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "'9-AxT1-thin_for_surgery-27598'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "      <td>07-02-2005-04728</td>\n",
        "      <td>1-3_PLANE_LOC-22369</td>\n",
        "      <td>0</td>\n",
-       "      <td>SCOUT</td>\n",
+       "      <td>LOCALIZER</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -336,7 +336,7 @@
        "                                               image  contrast contrast_label  \\\n",
        "0                      9-AxT1-thin_for_surgery-27598         1            T1C   \n",
        "1  21-nordicICE_HFH_-_rBF_map_-Leakage_corrected-...         1            rBF   \n",
-       "2                                1-3_PLANE_LOC-22369         0          SCOUT   \n",
+       "2                                1-3_PLANE_LOC-22369         0      LOCALIZER   \n",
        "3                            5-AXIAL_DIFFUSION-62807         0            DWI   \n",
        "4                            8-AXIAL_PERFUSION-44568         1      PERFUSION   \n",
        "\n",
@@ -348,7 +348,7 @@
        "4    ax              1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "T1C          669\n",
+       "T1           562\n",
+       "T2           424\n",
+       "DWI          353\n",
+       "T2_FLAIR     298\n",
+       "DTI          282\n",
+       "OTHER        251\n",
+       "LOCALIZER    189\n",
+       "ADC          185\n",
+       "PERFUSION    130\n",
+       "SCOUT        126\n",
+       "rBF           42\n",
+       "MTT           42\n",
+       "rBV           42\n",
+       "FA            30\n",
+       "MRSI           5\n",
+       "Name: contrast_label, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_label_df.contrast_label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +413,7 @@
        "(298, 8)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,18 +851,6 @@
    "display_name": "Fastai SVCF",
    "language": "python",
    "name": "fastai"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.2"
   }
  },
  "nbformat": 4,
