--- a/code_updated/04_mapping_segmentations_to_patientID_VisuallyVerify.ipynb
+++ b/code_updated/04_mapping_segmentations_to_patientID_VisuallyVerify.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "  {'image': 'TCGA-LGG-nifti/TCGA-DU-7309/08-31-1996-MRI_BRAIN_WWO_CONTRAST-83234/6-AXIAL_FLAIR-44187.nii.gz'}]}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,16 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "228"
+       "396"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "      <td>T1C</td>\n",
        "      <td>ax</td>\n",
        "      <td>1</td>\n",
-       "      <td>6-AXIAL_T1-20532</td>\n",
+       "      <td>4-AxFLAIR-thin_for_surgery-47036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -422,7 +422,7 @@
        "      <td>rBF</td>\n",
        "      <td>cor</td>\n",
        "      <td>1</td>\n",
-       "      <td>6-AXIAL_T1-20532</td>\n",
+       "      <td>4-AxFLAIR-thin_for_surgery-47036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -431,10 +431,10 @@
        "      <td>07-02-2005-04728</td>\n",
        "      <td>1-3_PLANE_LOC-22369</td>\n",
        "      <td>0</td>\n",
-       "      <td>SCOUT</td>\n",
+       "      <td>LOCALIZER</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
-       "      <td>6-AXIAL_T1-20532</td>\n",
+       "      <td>4-AxFLAIR-thin_for_surgery-47036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -446,7 +446,7 @@
        "      <td>DWI</td>\n",
        "      <td>ax</td>\n",
        "      <td>1</td>\n",
-       "      <td>6-AXIAL_T1-20532</td>\n",
+       "      <td>4-AxFLAIR-thin_for_surgery-47036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -458,7 +458,7 @@
        "      <td>PERFUSION</td>\n",
        "      <td>ax</td>\n",
        "      <td>1</td>\n",
-       "      <td>6-AXIAL_T1-20532</td>\n",
+       "      <td>4-AxFLAIR-thin_for_surgery-47036</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -475,19 +475,19 @@
        "                                               image  contrast contrast_label  \\\n",
        "0                      9-AxT1-thin_for_surgery-27598         1            T1C   \n",
        "1  21-nordicICE_HFH_-_rBF_map_-Leakage_corrected-...         1            rBF   \n",
-       "2                                1-3_PLANE_LOC-22369         0          SCOUT   \n",
+       "2                                1-3_PLANE_LOC-22369         0      LOCALIZER   \n",
        "3                            5-AXIAL_DIFFUSION-62807         0            DWI   \n",
        "4                            8-AXIAL_PERFUSION-44568         1      PERFUSION   \n",
        "\n",
-       "  plane  exam_eligible         fixed_vol  \n",
-       "0    ax              1  6-AXIAL_T1-20532  \n",
-       "1   cor              1  6-AXIAL_T1-20532  \n",
-       "2   NaN              1  6-AXIAL_T1-20532  \n",
-       "3    ax              1  6-AXIAL_T1-20532  \n",
-       "4    ax              1  6-AXIAL_T1-20532  "
+       "  plane  exam_eligible                         fixed_vol  \n",
+       "0    ax              1  4-AxFLAIR-thin_for_surgery-47036  \n",
+       "1   cor              1  4-AxFLAIR-thin_for_surgery-47036  \n",
+       "2   NaN              1  4-AxFLAIR-thin_for_surgery-47036  \n",
+       "3    ax              1  4-AxFLAIR-thin_for_surgery-47036  \n",
+       "4    ax              1  4-AxFLAIR-thin_for_surgery-47036  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        "(274, 3)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -612,7 +612,7 @@
        "4  TCGA-06-0648  TCGA-GBM                   01-20-2006-51419"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
        " 'TCGA-LGG-nifti/TCGA-DU-7309/08-31-1996-MRI_BRAIN_WWO_CONTRAST-83234/6-AXIAL_FLAIR-44187.nii.gz']"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,16 +917,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((228, 1), (234, 3))"
+       "((396, 1), (234, 3))"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -967,38 +967,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6-AXIAL_FLAIR-84159</td>\n",
+       "      <td>301-BRAIN______FLAIR-27209_fla</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7-AxFLAIR-thin_for_surgery-06923</td>\n",
+       "      <td>6-Ax_Flair_irFSE_H-08103_fla</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4-T2_FLAIR-53321</td>\n",
+       "      <td>4-Ax_Flair_irFSE_H-63620_fla</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5-Ax_T2_Flair-42124</td>\n",
+       "      <td>10-AXIAL_FLAIR-00786_fla</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7-AXIAL_FLAIR-66324</td>\n",
+       "      <td>6-AXIAL_FLAIR-84159</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  0\n",
-       "0               6-AXIAL_FLAIR-84159\n",
-       "1  7-AxFLAIR-thin_for_surgery-06923\n",
-       "2                  4-T2_FLAIR-53321\n",
-       "3               5-Ax_T2_Flair-42124\n",
-       "4               7-AXIAL_FLAIR-66324"
+       "                                0\n",
+       "0  301-BRAIN______FLAIR-27209_fla\n",
+       "1    6-Ax_Flair_irFSE_H-08103_fla\n",
+       "2    4-Ax_Flair_irFSE_H-63620_fla\n",
+       "3        10-AXIAL_FLAIR-00786_fla\n",
+       "4             6-AXIAL_FLAIR-84159"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
        "4               6-AXIAL_FLAIR-80030_TC.nii.gz  "
       ]
      },
-     "execution_count": 168,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
        "(224, 3)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
        "4               6-AXIAL_FLAIR-80030_TC.nii.gz  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
        "PosixPath('/working/lupolab/julia/tcia_analysis/nvidia/eval')"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
        "4                   01-20-2006-51419  "
       ]
      },
-     "execution_count": 175,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,22 +1368,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seg_df.to_csv(Path(PATH, 'segmentation_df.csv'), index = False)"
+    "seg_df.to_csv(Path(PATH, 'segmentation_fla_df.csv'), index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['TCGA-GBM-nifti',\n",
+       " 'segmentation_t1c_df.csv',\n",
        " '.ipynb_checkpoints',\n",
        " 'images_with_dicom_contrast.csv',\n",
        " 'one_exam_per_patient_with_fixed_vol.csv',\n",
@@ -1392,7 +1393,7 @@
        " 'tcga_subtype_data.csv',\n",
        " 'dicom_images_with_contrast.csv',\n",
        " 'contrast_labels_with_flair_eligibility.csv',\n",
-       " 'TCGA-LGG',\n",
+       " 'segmentation_fla_df.csv',\n",
        " 'exam_counts.txt',\n",
        " 'one_exam_per_patient_with_labels.csv',\n",
        " 'contrast_labels.csv',\n",
@@ -1401,11 +1402,10 @@
        " 'rename_script.sh',\n",
        " 'exam_counts.csv',\n",
        " 'contrast_labels_with_eligibility.csv',\n",
-       " 'TCGA-GBM',\n",
        " 'TCGA-LGG-nifti']"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
