T1C and FLAIR visual verfication updated

--- a/code_updated/04_T1C-map_segs_to_PID_visuallyVerify.ipynb
+++ b/code_updated/04_T1C-map_segs_to_PID_visuallyVerify.ipynb
@@ -2533,7 +2533,30 @@
       "Saving images for TCGA-14-0865\n",
       "Saving images for TCGA-06-0156\n",
       "Saving images for TCGA-08-0521\n",
-      "Saving images for TCGA-27-1836\n"
+      "Saving images for TCGA-27-1836\n",
+      "Saving images for TCGA-02-0048\n",
+      "Saving images for TCGA-14-0790\n",
+      "Saving images for TCGA-12-1601\n",
+      "Saving images for TCGA-14-1456\n",
+      "Saving images for TCGA-12-1094\n",
+      "Saving images for TCGA-19-5950\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sf673542/.local/lib/python3.7/site-packages/nilearn/plotting/displays.py:780: UserWarning: empty mask\n",
+      "  get_mask_bounds(new_img_like(img, not_mask, affine))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving images for TCGA-06-0187\n",
+      "Saving images for TCGA-06-0241\n",
+      "Saving images for TCGA-08-0392\n"
      ]
     }
    ],
