--- a/code_updated/04_FLAIR-map_segs_to_PID_visuallyVerify-redo.ipynb
+++ b/code_updated/04_FLAIR-map_segs_to_PID_visuallyVerify-redo.ipynb
@@ -2472,7 +2472,31 @@
       "Saving images for TCGA-14-1795\n",
       "Saving images for TCGA-02-0085\n",
       "Saving images for TCGA-06-0646\n",
-      "Saving images for TCGA-76-6280\n"
+      "Saving images for TCGA-76-6280\n",
+      "Saving images for TCGA-06-0881\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sf673542/.local/lib/python3.7/site-packages/nilearn/plotting/displays.py:780: UserWarning: empty mask\n",
+      "  get_mask_bounds(new_img_like(img, not_mask, affine))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving images for TCGA-06-0175\n",
+      "Saving images for TCGA-02-0059\n",
+      "Saving images for TCGA-06-1801\n",
+      "Saving images for TCGA-06-2570\n",
+      "Saving images for TCGA-76-4932\n",
+      "Saving images for TCGA-19-0963\n",
+      "Saving images for TCGA-06-0147\n",
+      "Saving images for TCGA-06-0130\n",
+      "Saving images for TCGA-14-1037\n"
      ]
     }
    ],
